<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/action_bar_height"
  android:background="@android:color/transparent"
  android:clickable="true"
  android:focusable="true">

  <TextView
    android:id="@+id/textviewReviewTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="32sp"
    android:layout_marginRight="32sp"
    android:fontFamily="@font/montserrat_semi_bold"
    android:text="@string/buy_sell_review_status_thanks"
    android:textColor="@color/primary_navy_medium"
    android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textviewReviewStatus"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="32sp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:fontFamily="@font/montserrat"
    android:text="@string/buy_sell_review_status"
    android:textColor="@color/primary_navy_medium"
    android:textSize="24sp"
    android:drawableLeft="@drawable/layer_list_timer"
    android:drawablePadding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textviewReviewTitle"/>

  <TextView
    android:id="@+id/textviewReviewMessage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="32sp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:fontFamily="@font/montserrat"
    android:text="@string/buy_sell_review_status_message"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.16"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textviewReviewStatus"/>

  <Button
    android:id="@+id/buttonContinue"
    style="@style/ButtonStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/CLOSE"
    android:theme="@style/ButtonLightBlueTheme"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>