<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_review_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="-30dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/buy_sell_overview_in_review_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_view_in_review_header"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector_timer_offset"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text_view_in_review_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat"
            android:gravity="right"
            android:text="@string/buy_sell_overview_in_review_title"
            android:textAllCaps="true"
            android:textColor="@color/primary_navy_medium"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/text_view_in_review_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_review_timer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text_view_in_review_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="right"
            android:text="@string/buy_sell_review_status_message"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/linear_layout_in_review_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_review_timer"
            app:layout_constraintTop_toBottomOf="@id/text_view_in_review_header"
            tools:ignore="RtlHardcoded" />

        <FrameLayout
            android:id="@+id/linear_layout_in_review_button_container"
            style="@style/CustomDialogButtonContainer"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/button_buy_now_card"
                style="@style/CustomDialogButton"
                android:text="@string/buy_sell_overview_in_review_button"
                android:textColor="@color/primary_blue_accent" />

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>